Complete the basic game flow structure without implementing the core functionality